# cs240h

./: .gitignore  README.md
14sp/lab1/: GlobParser.hs  Parser.hs  doctests.hs
14sp/lab2/: Server.hs
14sp/lab2/src/: Chat.hs
14sp/lab3/: README.md  trahs.cabal
16wi/lab1/tr-0.1.0.0/src/: Tr.hs
16wi/lab2/parseini-0.1.0.0/: parseini.cabal
16wi/lab2/parseini-0.1.0.0/src/: ParseIni.hs  Parser.hs
16wi/prop-sols/inimerge-0.1.0.0/: README.md  inimerge.cabal  stack.yaml
16wi/prop-sols/inimerge-0.1.0.0/app/: Web.hs
16wi/prop-sols/inimerge-0.1.0.0/src/: MergeIni.hs
16wi/prop-sols/tr-0.1.0.0/: README.md  tr.cabal
16wi/prop-sols/tr-0.1.0.0/app/: Main.hs
16wi/prop-sols/tr-0.1.0.0/src/: Tr.hs
16wi/prop-sols/tr-0.1.0.0/test/: Spec.hs
16wi/tr-0.1.0.0/: tr.cabal
16wi/tr-0.1.0.0/app/: Main.hs
16wi/tr-0.1.0.0/test/: Spec.hs
lab1/: GlobParser.hs  Main.hs  Main2.hs  Parser.hs  globber.cabal
lab2/: README.md  Server.hs  chat.cabal
lab2/src/: Chat.hs
lab3/: stack.yaml  testdb  trahs.cabal
lab3/src/: Trahs.hs  Utils.hs
lab3/test/: Test.hs
