name:           trahs
version:        1.0.0
synopsis:       Stanford CS240h Lab 3 - File Synchronizer
build-type:     Simple
cabal-version:  >= 1.10
category:       System

-- STUDENTS: Make sure you add any no haskell source files you want included in
-- your submission here!
extra-source-files:
  README.md

library
  default-language:    Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Trahs
    Utils
  build-depends:
    base < 5
   ,bytestring
   ,containers
   ,directory
   ,filepath
   ,process
   ,random
   ,SHA2
   ,unix-compat
   ,aeson
  ghc-options: -Wall

executable trahs
  default-language:    Haskell2010
  main-is: Main.hs
  build-depends:
    base < 5
   ,trahs
  
test-suite test-trahs
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
    base < 5
   ,QuickCheck > 2.5
   ,hspec
   ,hspec-core
   ,trahs
   ,directory
   ,containers
  ghc-options: -Wall

